--- a/style.css
+++ b/style.css
@@ -310,3 +310,46 @@ Here are the specific stats on the side
   display: none;
   ;
 }
+
+
+/*
+
+
+
+
+ERRORS STUFF
+
+
+
+
+*/
+
+
+.error-message{
+  max-width: 500px;
+  margin: auto;
+  background-color: var(--bright-pink);
+  padding: 16px;
+  border-radius: 4px;
+    transition: opacity 0.5s ease-in-out;
+      /* Transition effect */
+
+}
+
+.error-message h6{
+  margin-top:8px;
+  font-style: italic;
+
+}
+
+.error-message h3 {
+  margin: 0;
+  font-size: 2em;
+  text-shadow: 1px 1px 0 var(--oxford-blue),
+      /* Right and Bottom shadow */
+      -0px -0px 0 #04052E;
+}
+
+p.error-text{
+  text-align: center;
+}
