--- a/style.css
+++ b/style.css
@@ -577,3 +577,40 @@ text {
 .error-title{
   color:var(--oxford-blue);
 }
+
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin: 1rem auto 0;
+  padding: 1rem 0 0.75rem 0;
+  width: 100%;
+  flex-wrap: wrap;
+  /* border-top: 4px solid #fff; */
+}
+
+.footer a {
+  transition: 200ms;
+}
+
+.footer a:not(.btn--remix):link,
+a:not(.btn--remix):visited {
+  color: var(--ghost-white);
+
+  font-style: italic;
+  font-weight: bold;
+  font-size: 1.2rem;
+  /* color: #000; */
+  text-decoration: none;
+  border-style: none;
+}
+
+.footer a:hover {
+  background: var(--bright-pink);
+  color: var(--ghost-white);
+}
+
+.footer .links {
+  padding: 0.5rem 1rem 1.5rem;
+  white-space: nowrap;
+}
